# llm_proxy

./: .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLI_README.md  LICENSE  Makefile  README.md  README_CN.md  README_EN.md  docker-compose.yml  pyproject.toml  setup.py
llm_proxy_cli/: __init__.py  docker_manager.py  main.py  nginx_manager.py
nginx/: nginx.conf
tests/: __init__.py  test_nginx_manager.py
