[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-proxy-cli"
version = "0.1.0"
description = "Command line tool for managing LLM proxy configurations"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "User", email = "user@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "pyyaml>=6.0",
    "docker>=6.0.0",
    "rich>=13.0.0",
]

[project.scripts]
llm-proxy = "llm_proxy_cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.ruff.lint.isort]
known-first-party = ["llm_proxy_cli"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true